{
  "version": 4,
  "terraform_version": "1.5.6",
  "serial": 200,
  "lineage": "7651c487-92c6-9a99-2a48-2094446b7c20",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0649298124b45c04b",
            "association_id": "eipassoc-0307bbc80d2df1e64",
            "domain": "vpc",
            "id": "eipalloc-0649298124b45c04b",
            "network_border_group": "us-east-1",
            "network_interface": "eni-09cfda5b9e82401b1",
            "private_dns": "ip-10-0-11-119.ec2.internal",
            "private_ip": "10.0.11.119",
            "public_dns": "ec2-23-23-232-2.compute-1.amazonaws.com",
            "public_ip": "23.23.232.2",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06bef1eecf4824385",
            "association_id": "eipassoc-035c64688e28ee997",
            "domain": "vpc",
            "id": "eipalloc-06bef1eecf4824385",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0415bbaf22fc97bcb",
            "private_dns": "ip-10-0-12-139.ec2.internal",
            "private_ip": "10.0.12.139",
            "public_dns": "ec2-54-211-123-176.compute-1.amazonaws.com",
            "public_ip": "54.211.123.176",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0649298124b45c04b",
            "association_id": "eipassoc-0307bbc80d2df1e64",
            "connectivity_type": "public",
            "id": "nat-039018a4a0464879b",
            "network_interface_id": "eni-09cfda5b9e82401b1",
            "private_ip": "10.0.11.119",
            "public_ip": "23.23.232.2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-004a68d0d4a786187",
            "tags": {
              "Name": "nat-a"
            },
            "tags_all": {
              "Name": "nat-a"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip_a",
            "aws_subnet.public-a",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06bef1eecf4824385",
            "association_id": "eipassoc-035c64688e28ee997",
            "connectivity_type": "public",
            "id": "nat-0adea9d90f8ba1d42",
            "network_interface_id": "eni-0415bbaf22fc97bcb",
            "private_ip": "10.0.12.139",
            "public_ip": "54.211.123.176",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-036f9a9a27dcdf19a",
            "tags": {
              "Name": "nat-b"
            },
            "tags_all": {
              "Name": "nat-b"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip_b",
            "aws_subnet.public-b",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.0.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-07508928ffc516a1c179966490",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07508928ffc516a1c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0df6172c80f4b4627"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_route_table.rt-database",
            "aws_vpc_peering_connection.app_rds"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.1.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-05e45911ad64ed8d63322942084",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05e45911ad64ed8d6",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0df6172c80f4b4627"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip_a",
            "aws_nat_gateway.nat_a",
            "aws_route_table.rt-private-a",
            "aws_subnet.public-a",
            "aws_vpc_peering_connection.app_rds",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.1.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0a4b971c103c2a35e3322942084",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a4b971c103c2a35e",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0df6172c80f4b4627"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip_b",
            "aws_nat_gateway.nat_b",
            "aws_route_table.rt-private-b",
            "aws_subnet.public-b",
            "aws_vpc_peering_connection.app_rds",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:858786174761:route-table/rtb-023b7e887c5fdae77",
            "id": "rtb-023b7e887c5fdae77",
            "owner_id": "858786174761",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e2eaf97b658b6070",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public"
            },
            "tags_all": {
              "Name": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-047743fc91d1f8248"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt-database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:858786174761:route-table/rtb-07508928ffc516a1c",
            "id": "rtb-07508928ffc516a1c",
            "owner_id": "858786174761",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "rt-database"
            },
            "tags_all": {
              "Name": "rt-database"
            },
            "timeouts": null,
            "vpc_id": "vpc-024f23a8405ed0ca0"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt-private-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:858786174761:route-table/rtb-05e45911ad64ed8d6",
            "id": "rtb-05e45911ad64ed8d6",
            "owner_id": "858786174761",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": null,
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": null,
                "destination_prefix_list_id": null,
                "egress_only_gateway_id": null,
                "gateway_id": null,
                "ipv6_cidr_block": null,
                "local_gateway_id": null,
                "nat_gateway_id": "nat-039018a4a0464879b",
                "network_interface_id": null,
                "transit_gateway_id": null,
                "vpc_endpoint_id": null,
                "vpc_peering_connection_id": null
              }
            ],
            "tags": {
              "Name": "rt-private-a"
            },
            "tags_all": {
              "Name": "rt-private-a"
            },
            "timeouts": null,
            "vpc_id": "vpc-047743fc91d1f8248"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.nat_a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt-private-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:858786174761:route-table/rtb-0a4b971c103c2a35e",
            "id": "rtb-0a4b971c103c2a35e",
            "owner_id": "858786174761",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": null,
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": null,
                "destination_prefix_list_id": null,
                "egress_only_gateway_id": null,
                "gateway_id": null,
                "ipv6_cidr_block": null,
                "local_gateway_id": null,
                "nat_gateway_id": "nat-0adea9d90f8ba1d42",
                "network_interface_id": null,
                "transit_gateway_id": null,
                "vpc_endpoint_id": null,
                "vpc_peering_connection_id": null
              }
            ],
            "tags": {
              "Name": "rt-private-b"
            },
            "tags_all": {
              "Name": "rt-private-b"
            },
            "timeouts": null,
            "vpc_id": "vpc-047743fc91d1f8248"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.nat_b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02895a74ee10ff83c",
            "route_table_id": "rtb-023b7e887c5fdae77",
            "subnet_id": "subnet-004a68d0d4a786187"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public-a",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b73daac876f74214",
            "route_table_id": "rtb-023b7e887c5fdae77",
            "subnet_id": "subnet-036f9a9a27dcdf19a"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public-b",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "data-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e31cec7fae2193cb",
            "route_table_id": "rtb-07508928ffc516a1c",
            "subnet_id": "subnet-0a177bba3ceabf24e"
          },
          "dependencies": [
            "aws_route_table.rt-database",
            "aws_subnet.database-a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "data-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-082ea1a65311ab803",
            "route_table_id": "rtb-07508928ffc516a1c",
            "subnet_id": "subnet-0a97a7241de3332d0"
          },
          "dependencies": [
            "aws_route_table.rt-database",
            "aws_subnet.database-b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pr-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-034b2bb6c003920f2",
            "route_table_id": "rtb-05e45911ad64ed8d6",
            "subnet_id": "subnet-01cadc036525da1b0"
          },
          "dependencies": [
            "aws_eip.nat_eip_a",
            "aws_nat_gateway.nat_a",
            "aws_route_table.rt-private-a",
            "aws_subnet.private-a",
            "aws_subnet.public-a",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pr-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eb7c6d3ddda3c165",
            "route_table_id": "rtb-0a4b971c103c2a35e",
            "subnet_id": "subnet-05a9bebac0c6f482f"
          },
          "dependencies": [
            "aws_eip.nat_eip_b",
            "aws_nat_gateway.nat_b",
            "aws_route_table.rt-private-b",
            "aws_subnet.private-b",
            "aws_subnet.public-b",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:858786174761:security-group/sg-0dd6fd49f681807f9",
            "description": "alb-security-group security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dd6fd49f681807f9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "alb",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-security-group",
            "name_prefix": "",
            "owner_id": "858786174761",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb-security-group"
            },
            "tags_all": {
              "Name": "alb-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-047743fc91d1f8248"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "docdb-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:858786174761:security-group/sg-0a2d1fcc8f47f8362",
            "description": "docdb-security-group security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a2d1fcc8f47f8362",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "docdb from service",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 27017
              }
            ],
            "name": "docdb-security-group",
            "name_prefix": "",
            "owner_id": "858786174761",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "docdb-security-group"
            },
            "tags_all": {
              "Name": "docdb-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-047743fc91d1f8248"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "efs-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:858786174761:security-group/sg-0d32fd45dd4dd2c96",
            "description": "efs-security-group security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d32fd45dd4dd2c96",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "service",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "efs-security-group",
            "name_prefix": "",
            "owner_id": "858786174761",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "efs-security-group"
            },
            "tags_all": {
              "Name": "efs-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-047743fc91d1f8248"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "memcache-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:858786174761:security-group/sg-0d44db05a08b3a158",
            "description": "memcache security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d44db05a08b3a158",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "memcache from service",
                "from_port": 11211,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 11211
              }
            ],
            "name": "memcache-security-group",
            "name_prefix": "",
            "owner_id": "858786174761",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "memcache-security-group"
            },
            "tags_all": {
              "Name": "memcache-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-047743fc91d1f8248"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mysql-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:858786174761:security-group/sg-04822b6ae90044e71",
            "description": "mysql-security-group security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04822b6ae90044e71",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "mysql from service",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "mysql-security-group",
            "name_prefix": "",
            "owner_id": "858786174761",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mysql-security-group"
            },
            "tags_all": {
              "Name": "mysql-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-047743fc91d1f8248"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "postgre-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:858786174761:security-group/sg-00bdcc03b08c7f579",
            "description": "postgre-security-group security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00bdcc03b08c7f579",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Postgre from service",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "postgre-security-group",
            "name_prefix": "",
            "owner_id": "858786174761",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "postgre-security-group"
            },
            "tags_all": {
              "Name": "postgre-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-047743fc91d1f8248"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds-efs-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:858786174761:security-group/sg-074cebacbfdad10d5",
            "description": "rds-efs-security-group security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-074cebacbfdad10d5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "service",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "rds-efs-security-group",
            "name_prefix": "",
            "owner_id": "858786174761",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "rds-efs-security-group"
            },
            "tags_all": {
              "Name": "rds-efs-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-024f23a8405ed0ca0"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "redis-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:858786174761:security-group/sg-08b9c93c3d10011e7",
            "description": "redis security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08b9c93c3d10011e7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "redis from service",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "redis-security-group",
            "name_prefix": "",
            "owner_id": "858786174761",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "redis-security-group"
            },
            "tags_all": {
              "Name": "redis-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-047743fc91d1f8248"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "server-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:858786174761:security-group/sg-039ce642011139df0",
            "description": "server-security-group security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-039ce642011139df0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "service",
                "from_port": 7777,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 7777
              }
            ],
            "name": "server-security-group",
            "name_prefix": "",
            "owner_id": "858786174761",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "server-security-group"
            },
            "tags_all": {
              "Name": "server-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-047743fc91d1f8248"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:858786174761:security-group/sg-0c885d55130b9d750",
            "description": "ssh-security-group security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c885d55130b9d750",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Postgre from service",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ssh-security-group",
            "name_prefix": "",
            "owner_id": "858786174761",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ssh-security-group"
            },
            "tags_all": {
              "Name": "ssh-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-047743fc91d1f8248"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:858786174761:subnet/subnet-0a177bba3ceabf24e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.1.202.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a177bba3ceabf24e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "858786174761",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "database-a"
            },
            "tags_all": {
              "Name": "database-a"
            },
            "vpc_id": "vpc-024f23a8405ed0ca0"
          },
          "dependencies": [
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:858786174761:subnet/subnet-0a97a7241de3332d0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.1.201.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a97a7241de3332d0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "858786174761",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "database-b"
            },
            "tags_all": {
              "Name": "database-b"
            },
            "vpc_id": "vpc-024f23a8405ed0ca0"
          },
          "dependencies": [
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:858786174761:subnet/subnet-01cadc036525da1b0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01cadc036525da1b0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "858786174761",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-a"
            },
            "tags_all": {
              "Name": "private-a"
            },
            "vpc_id": "vpc-047743fc91d1f8248"
          },
          "dependencies": [
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:858786174761:subnet/subnet-05a9bebac0c6f482f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05a9bebac0c6f482f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "858786174761",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-b"
            },
            "tags_all": {
              "Name": "private-b"
            },
            "vpc_id": "vpc-047743fc91d1f8248"
          },
          "dependencies": [
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:858786174761:subnet/subnet-004a68d0d4a786187",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-004a68d0d4a786187",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "858786174761",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-a"
            },
            "tags_all": {
              "Name": "public-a"
            },
            "vpc_id": "vpc-047743fc91d1f8248"
          },
          "dependencies": [
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:858786174761:subnet/subnet-036f9a9a27dcdf19a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-036f9a9a27dcdf19a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "858786174761",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-b"
            },
            "tags_all": {
              "Name": "public-b"
            },
            "vpc_id": "vpc-047743fc91d1f8248"
          },
          "dependencies": [
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "app_rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-0df6172c80f4b4627",
            "peer_owner_id": "858786174761",
            "peer_region": "us-east-1",
            "peer_vpc_id": "vpc-047743fc91d1f8248",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "vpc_id": "vpc-024f23a8405ed0ca0"
          }
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:858786174761:loadbalancer/app/sap-dev-alb/e5ac287356ba7b95",
            "arn_suffix": "app/sap-dev-alb/e5ac287356ba7b95",
            "desync_mitigation_mode": "defensive",
            "dns_name": "sap-dev-alb-684133346.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:858786174761:loadbalancer/app/sap-dev-alb/e5ac287356ba7b95",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "sap-dev-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-04b981e0ae510fe89",
              "sg-0dd6fd49f681807f9"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-004a68d0d4a786187"
              },
              {
                "subnet_id": "subnet-036f9a9a27dcdf19a"
              }
            ],
            "subnets": [
              "subnet-004a68d0d4a786187",
              "subnet-036f9a9a27dcdf19a"
            ],
            "tags": {
              "Name": "sap-dev-alb",
              "environment": "dev",
              "owners": "sap"
            },
            "tags_all": {
              "Name": "sap-dev-alb",
              "environment": "dev",
              "owners": "sap"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_id": "vpc-047743fc91d1f8248",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb-security-group",
            "aws_subnet.public-a",
            "aws_subnet.public-b",
            "data.aws_availability_zones.available",
            "module.alb.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend_http_tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:858786174761:listener/app/sap-dev-alb/e5ac287356ba7b95/48fc842c74ae47df",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:858786174761:targetgroup/app1-20230912024028212600000001/99759f8544ac3753",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:858786174761:listener/app/sap-dev-alb/e5ac287356ba7b95/48fc842c74ae47df",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:858786174761:loadbalancer/app/sap-dev-alb/e5ac287356ba7b95",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "environment": "dev",
              "owners": "sap"
            },
            "tags_all": {
              "environment": "dev",
              "owners": "sap"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb-security-group",
            "aws_subnet.public-a",
            "aws_subnet.public-b",
            "data.aws_availability_zones.available",
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_target_group.main",
            "module.alb.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "http_tcp_listener_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:858786174761:targetgroup/app2-20230912024029009000000003/238193a48e0d8fad",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:858786174761:listener-rule/app/sap-dev-alb/e5ac287356ba7b95/48fc842c74ae47df/955a6ddd22a6d45b",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/app2/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:858786174761:listener-rule/app/sap-dev-alb/e5ac287356ba7b95/48fc842c74ae47df/955a6ddd22a6d45b",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:858786174761:listener/app/sap-dev-alb/e5ac287356ba7b95/48fc842c74ae47df",
            "priority": 1,
            "tags": {
              "environment": "dev",
              "owners": "sap"
            },
            "tags_all": {
              "environment": "dev",
              "owners": "sap"
            }
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb-security-group",
            "aws_subnet.public-a",
            "aws_subnet.public-b",
            "data.aws_availability_zones.available",
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_listener.frontend_http_tcp",
            "module.alb.aws_lb_target_group.main",
            "module.alb.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:858786174761:targetgroup/app1-20230912024028212600000001/99759f8544ac3753",
            "arn_suffix": "targetgroup/app1-20230912024028212600000001/99759f8544ac3753",
            "connection_termination": false,
            "deregistration_delay": "10",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-399",
                "path": "/healthcheck",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 6,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:858786174761:targetgroup/app1-20230912024028212600000001/99759f8544ac3753",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "app1-20230912024028212600000001",
            "name_prefix": "app1-",
            "port": 7777,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "app1-",
              "environment": "dev",
              "owners": "sap"
            },
            "tags_all": {
              "Name": "app1-",
              "environment": "dev",
              "owners": "sap"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-047743fc91d1f8248"
          },
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:858786174761:targetgroup/app2-20230912024029009000000003/238193a48e0d8fad",
            "arn_suffix": "targetgroup/app2-20230912024029009000000003/238193a48e0d8fad",
            "connection_termination": false,
            "deregistration_delay": "10",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 6,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:858786174761:targetgroup/app2-20230912024029009000000003/238193a48e0d8fad",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "app2-20230912024029009000000003",
            "name_prefix": "app2-",
            "port": 7777,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "app2-",
              "environment": "dev",
              "owners": "sap"
            },
            "tags_all": {
              "Name": "app2-",
              "environment": "dev",
              "owners": "sap"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-047743fc91d1f8248"
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:858786174761:security-group/sg-04b981e0ae510fe89",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-04b981e0ae510fe89",
            "ingress": [],
            "name": "sap-dev-alb-20230912024028223300000002",
            "name_prefix": "sap-dev-alb-",
            "owner_id": "858786174761",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sap-dev-alb",
              "environment": "dev",
              "owners": "sap"
            },
            "tags_all": {
              "Name": "sap-dev-alb",
              "environment": "dev",
              "owners": "sap"
            },
            "timeouts": null,
            "vpc_id": "vpc-047743fc91d1f8248"
          },
          "sensitive_attributes": [],
          "create_before_destroy": true
        }
      ]
    }
  ]
}